--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1 class="slide-horizontal" data-splitting>&lt;/Josh-Sturgess&gt;</h1>
-								<p><b>UI Developer</b> <span class="divider" style="text-align: center;"> and </span> <b>Interaction Designer</b> <br />
+								<p><b>UI Developer</b> <span class="divider" style="text-align: center;"> || </span> <b>Interaction Designer</b> <br />
 									with an emphasis in <b>usability</b>, <b>interaction design</b>, and <b>conversion-rate</b> optimization.</p>
 							</div>
 						</div>
@@ -116,7 +116,7 @@
 
 						 		<span class="image main"><img src="images/MurphyDoorDemo.jpg" alt="MurphyDoorDemo" /></span>
 <p>ReactJS is currently the leading technology for developing modern user interfaces, and would be a great option for your company to implement if you decide to update or migrate your website. This is especially true if you consider the increasing amount of people who will be viewing and shopping from a mobile device.</p>
-<p>I decided to piece together a simple front-end demo using JavaScript and Bootstrap to show that I can build things without visual design tools, just by writing code. I have been trying to practice programming in React lately anyway, so this served as a welcome challenge for me.</p>
+<p>I decided to piece together a simple front-end demo using JavaScript and Bootstrap to show that I can build things without visual design tools, just by writing code. I have been trying to practice React lately anyway, so this served as a welcome challenge for me.</p>
 
 								<h2 class="major" style="max-width: 100%;">Film Score Portfolio:</h2>
 								<span class="image main"><a href="https://webflow.com/website/dillonkellyportfolio" target="_blank"><img src="images/DKportfolio.jpg" alt="Sound Designer's Portfolio" /></a></span>
