--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<div class="inner">
 								<h1 class="slide-horizontal" data-splitting>&lt;/Josh-Sturgess&gt;</h1>
 								<p><b>UI Developer</b> <span class="divider" style="text-align: center;"> || </span> <b>Interaction Designer</b> <br />
-									with an emphasis in <b>usability</b>, <b>interaction design</b>, and <b>conversion-rate</b> optimization.</p>
+									with an emphasis in <b>usability</b>, <b>motion graphics</b>, and <b>conversion-rate optimization.</p></b>
 							</div>
 						</div>
 						<nav>
