--- a/index.html
+++ b/index.html
@@ -70,30 +70,33 @@
 								<div id="myCanvasContainer">
 						      <canvas width="500" height="500" id="myCanvas" style="width: 100%;">
 						        <ul>
-						          <li> <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML5</a></li>
-						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">CSS3</a></li>
-						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">Information Architecture</a></li>
-						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">[✖‿✖]</a></li>
-						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">Usability Testing</a></li>
-						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript</a></li><li><a data-weight="24" href="https://en.wikipedia.org/wiki/Representational_state_transfer" target="_blank">REST API</a></li>
-						          <li><a data-weight="21" href="https://en.wikipedia.org/wiki/Ajax_(programming)" target="_blank">AJAX</a></li>
-						          <li><a data-weight="14" href="https://en.wikipedia.org/wiki/JSON" target="_blank">JSON</a></li><li><a data-weight="13" href="https://en.wikipedia.org/wiki/XML" target="_blank">React</a></li>
-						          <li><a data-weight="27" href="https://en.wikipedia.org/wiki/AngularJS" target="_blank">Webflow</a></li>
-						          <li><a data-weight="26" href="https://en.wikipedia.org/wiki/WordPress" target="_blank">Shopify Certified</a></li><li><a data-weight="22" href="https://en.wikipedia.org/wiki/PHP" target="_blank">Jquery</a></li>
-						          <li><a data-weight="22" href="https://en.wikipedia.org/wiki/MySQL" target="_blank">PostgreSQL</a></li><li><a data-weight="21" href="https://en.wikipedia.org/wiki/Node.js" target="_blank">Node.js</a></li>
-						          <li><a data-weight="17" href="https://en.wikipedia.org/wiki/Git" target="_blank">Git</a></li><li><a data-weight="17" href="https://en.wikipedia.org/wiki/Underscore.jst" target="_blank">Josh Sturgess</a></li>
-						          <li><a data-weight="17" href="http://handlebarsjs.com/" target="_blank">Express.js</a></li>
-						          <li><a data-weight="20" href="https://vuejs.org/" target="_blank">Babel</a></li><li><a data-weight="23" href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)" target="_blank">Bootstrap</a></li>
-						          <li><a data-weight="15" href="https://en.wikipedia.org/wiki/Sass_(stylesheet_language)" target="_blank">SASS</a></li>
-						          <li><a data-weight="19" href="https://en.wikipedia.org/wiki/JQuery" target="_blank">Photoshop</a></li><li><a data-weight="19" href="http://mongoosejs.com/" target="_blank">Illustrator</a></li>
-						          <li><a data-weight="19" href="https://karma-runner.github.io/1.0/index.html" target="_blank">Motion Graphics</a></li><li><a data-weight="19" href="http://gulpjs.com/" target="_blank">Gulp</a></li>
-						          <li><a data-weight="19" href="https://www.npmjs.com/" target="_blank">NPM</a></li><li><a data-weight="19" href="https://bower.io/" target="_blank">Adobe XD</a></li>
-						          <li><a data-weight="19" href="https://en.wikipedia.org/wiki/BEM" target="_blank">【=◈︿◈=】</a></li><li><a data-weight="19" href="https://en.wikipedia.org/wiki/Magento" target="_blank">Custom Ecommerce</a></li>
-						          <li><a data-weight="13" href="https://en.wikipedia.org/wiki/Drupal" target="_blank">User Experience</a></li>
-						          <li><a data-weight="13" href="https://en.wikipedia.org/wiki/Drupal" target="_blank">¯\_(ツ)_/¯</a></li>
-						          <li><a data-weight="13" href="https://en.wikipedia.org/wiki/Drupal" target="_blank">Redux</a></li>
-											<li><a data-weight="14" href="https://en.wikipedia.org/wiki/LAMP_(software_bundle)" target="_blank">MERN Stack</a></li>
-						          <li><a data-weight="19" href="https://en.wikipedia.org/wiki/Canvas_element" target="_blank">Mobile App Design</a></li>
+						          <li> <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank">HTML5</a></li>
+						          <li><a data-weight="25" href="https://joshsturgessdesigns.com" target="_blank">CSS3</a></li>
+						          <li><a data-weight="25" href="https://joshsturgessdesigns.com" target="_blank">Information Architecture</a></li>
+						          <li><a data-weight="25" href="joshsturgessdesigns.com" target="_blank">[✖‿✖]</a></li>
+						          <li><a data-weight="25" href="joshsturgessdesigns.com" target="_blank">Usability Testing</a></li>
+						          <li><a data-weight="25" href="joshsturgessdesigns.com" target="_blank">JavaScript</a></li><li><a data-weight="24" href="https://en.wikipedia.org/wiki/Representational_state_transfer" target="_blank">REST API</a></li>
+						          <li><a data-weight="21" href="https://joshsturgessdesigns.com" target="_blank">AJAX</a></li>
+						          <li><a data-weight="14" href="https://joshsturgessdesigns.com" target="_blank">JSON</a></li><li><a data-weight="13" href="https://en.wikipedia.org/wiki/XML" target="_blank">React</a></li>
+						          <li><a data-weight="27" href="https://joshsturgessdesigns.com" target="_blank">Webflow</a></li>
+							  <li><a data-weight="27" href="https://joshsturgessdesigns.com" target="_blank">詠春</a></li>
+						          <li><a data-weight="26" href="https://joshsturgessdesigns.com" target="_blank">Shopify Certified</a></li><li><a data-weight="22" href="https://en.wikipedia.org/wiki/PHP" target="_blank">Jquery</a></li>
+						          <li><a data-weight="22" href="https://joshsturgessdesigns.com" target="_blank">PostgreSQL</a></li><li><a data-weight="21" href="https://en.wikipedia.org/wiki/Node.js" target="_blank">Node.js</a></li>
+						          <li><a data-weight="17" href="https://joshsturgessdesigns.com" target="_blank">Git</a></li><li><a data-weight="17" href="https://en.wikipedia.org/wiki/Underscore.jst" target="_blank">Josh Sturgess</a></li>
+						          <li><a data-weight="17" href="http://joshsturgessdesigns.com" target="_blank">Express.js</a></li>
+							  <li><a data-weight="17" href="https://joshsturgessdesigns.com" target="_blank">LIQUID</a></li>
+						          <li><a data-weight="20" href="https://joshsturgessdesigns.com" target="_blank">Babel</a></li><li><a data-weight="23" href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)" target="_blank">Bootstrap</a></li>
+						          <li><a data-weight="15" href="https://joshsturgessdesigns.com" target="_blank">SASS</a></li>
+						          <li><a data-weight="19" href="https://joshsturgessdesigns.com" target="_blank">Photoshop</a></li><li><a data-weight="19" href="http://mongoosejs.com/" target="_blank">Illustrator</a></li>
+						          <li><a data-weight="19" href="https://joshsturgessdesigns.com" target="_blank">Motion Graphics</a></li>
+							  <li><a data-weight="19" href="http://joshsturgessdesigns.com" target="_blank">Gulp</a></li>
+						          <li><a data-weight="19" href="https://joshsturgessdesigns.com" target="_blank">NPM</a></li><li><a data-weight="19" href="https://bower.io/" target="_blank">Adobe XD</a></li>
+						          <li><a data-weight="19" href="https://joshsturgessdesigns.com" target="_blank">【=◈︿◈=】</a></li><li><a data-weight="19" href="https://en.wikipedia.org/wiki/Magento" target="_blank">Custom Ecommerce</a></li>
+						          <li><a data-weight="13" href="https://joshsturgessdesigns.com" target="_blank">User Experience</a></li>
+						          <li><a data-weight="13" href="https://joshsturgessdesigns.com" target="_blank">¯\_(ツ)_/¯</a></li>
+						          <li><a data-weight="13" href="https://joshsturgessdesigns.com" target="_blank">Redux</a></li>
+							  <li><a data-weight="14" href="https://joshsturgessdesigns.com" target="_blank">MERN Stack</a></li>
+						          <li><a data-weight="19" href="https://joshsturgessdesigns.com" target="_blank">Mobile App Design</a></li>
 						        </ul>
 						      </canvas>
 						    </div>
